<resources>
    <string name="app_name">My_Calculator</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="Delete" >DEL</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="plus">+</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="minus">-</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="multiply">*</string>
    <string name="value_0">0</string>
    <string name="point">.</string>
    <string name="equly">=</string>
    <string name="devide">/</string>
</resources>
