<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.my_calculator.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/resultOfOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/numberInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ce"
                android:onClick="onCEClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:onClick="onCClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Delete"
                android:onClick="onDelClick"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_7"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_8"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_9"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:onClick="onMathematicalSignClick"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_4"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_5"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_6"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:onClick="onMathematicalSignClick"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_1"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_2"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_3"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonMultiplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:onClick="onMathematicalSignClick"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_0"
                android:onClick="onDigitClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:onClick="onDotClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equly"
                android:onClick="onResultClick"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devide"
                android:onClick="onMathematicalSignClick"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>